# gendiff

./: Cargo.toml  README.md
.github/workflows/: rustci.yml
src/: cli.rs  diff_tree.rs  differ.rs  file_data_loader.rs  lib.rs  main.rs  parser.rs
src/formatters/: mod.rs  plain.rs  render_diff.rs  stylish.rs
tests/: test_generate_diff.rs
