[package]
name = "gendiff"
version = "0.1.0"
edition = "2021"
authors = ["WeedRap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.17", features = ["cargo"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"

[dev-dependencies]
cargo-tarpaulin = "0.27.3"
clippy = "0.0.302"